# FHWS-ComputerGraphics

./: .gitignore
OpenGL-compatibility/: CMakeLists.txt  Mesh.cpp  Mesh.h  Obj.cpp  Obj.h  objloader.cpp  objloader.h  shaders.h  simple.cpp  simple.h
OpenGL-core/: CMakeLists.txt  shader.cpp
Raster2D/: CMakeLists.txt  Transformer.cpp  Transformer.h  objloader.h  ppm.h  render.h  simple.cpp  simple.h  transformation.cpp  transformation.h
Shaders/: Flat.frag  Gouraud.vert  Phong.frag  Phong.vert  Toon.frag  Toon.vert  VisualizeNormals.frag  VisualizeNormals.vert
Wavefront Datasets CG/datasets/lucy/: Lucy_Displacement.tga  Lucy_NormalsMap.tga
raytrace/: Camera.h  Objekt.h  Ray.cpp  Ray.h  raytrace-bild.ppm  raytrace-bildold.ppm  raytrace.cpp  raytrace.sln  raytrace.vcxproj  rayyacc.tab.c  rayyacc.y
raytrace/data/: dflt.data
raytrace/x64/Debug/: raytrace.exe.recipe  raytrace.ilk  raytrace.vcxproj.FileListAbsolute.txt  vc143.idb
raytrace/x64/Debug/raytrace.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  raytrace.lastbuildstate
texture/texture/: brick_bump.h  moonmap.h  orange.h  orange_bump.h  orange_normal.h  wave_displace.h  wave_normal.h  wmap.h
